fixing pre code overflow

--- a/conf/main.less
+++ b/conf/main.less
@@ -97,7 +97,12 @@ code {
 	font-size: 12px;
 }
 pre {
-  padding: 20px;
+  	padding: 20px;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	word-wrap: break-word;
 }
 blockquote {
   font-style: italic;
@@ -105,6 +110,7 @@ blockquote {
 
 body > header {
 	text-align: right;
+	width: 760px;
 	#findme {margin: 8px;}
 }
 
